Fix table border to remove unwanted scrollbar

--- a/app/assets/stylesheets/rorschart.css
+++ b/app/assets/stylesheets/rorschart.css
@@ -11,7 +11,7 @@ table {
 }
 
 .header_cel {
-  border: 0px;
+  border: 1px solid #FFF;
   font-weight: bold;
 }
 
